--- a/package.json
+++ b/package.json
@@ -85,5 +85,6 @@
     "tsx": "^4.19.2",
     "typescript": "^5"
   },
-  "packageManager": "pnpm@9.12.3"
+  "packageManager": "pnpm@9.12.3",
+  "vercel": "39.1.1"
 }
